samples/_failures_safe/1761347383_4bba77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2823b5d1.c: In function ‘process_compression’:
./samples/SAFE/__tmp_2823b5d1.c:144:5: error: expected declaration or statement at end of input
  144 |     }
      |     ^
